Update example text

--- a/example/index.html
+++ b/example/index.html
@@ -48,24 +48,24 @@
 		
 		<ul id="accordion" class="candyaccordion">
 			<li>
-				<div class="candytitle">Accordion Title</div>
-				<div class="candytext">Accordion text</div>
+				<div class="candytitle">What is CandyAccordion?</div>
+				<div class="candytext">CandyAccordion is a small, lightweight and easy to use accordion that takes advantage of the jQuery library.</div>
 			</li>
 			<li>
-				<div class="candytitle">Accordion Title</div>
-				<div class="candytext">Accordion text</div>
+				<div class="candytitle">Who Made It?</div>
+				<div class="candytext">CandyAccordion was made by <a href="http://www.twitter.com/steve228uk" title="Twitter">@steve228uk</a>, a web developer from Leicester, UK.</div>
 			</li>
 			<li>
-				<div class="candytitle">Accordion Title</div>
-				<div class="candytext">Accordion text</div>
+				<div class="candytitle">Can I Use CandyAccordion?</div>
+				<div class="candytext">Absolutely! CandyAccordion is under a dual MIT/GPL license (the same as jQuery) meaning anyone can use, adapt and contribute to it. Of course I wouldn't mind a link back.</div>
 			</li>
 			<li>
-				<div class="candytitle">Accordion Title</div>
-				<div class="candytext">Accordion text</div>
+				<div class="candytitle">What Version of jQuery Does it Require?</div>
+				<div class="candytext">CandyAccordion should work with jQuery 1.3+ but if you're not using the latest version I'd strongly recommend upgrading as there are some nice new functions.</div>
 			</li>
 			<li>
-				<div class="candytitle">Accordion Title</div>
-				<div class="candytext">Accordion text</div>
+				<div class="candytitle">Anything Else?</div>
+				<div class="candytext">No, that's all for now. Take a look at some of my other plugins if you're looking for a simple image gallery or tab plugin.</div>
 			</li>
 		</ul>
 	
